@@ -9,6 +9,9 @@ case config['mailer']
   when 'sendgrid'
     gem 'sendgrid'
     recipes << 'sendgrid'
+  when 'mandrill'
+    gem 'hominid'
+    recipes << 'mandrill'
 end
 
 after_bundler do
@@ -86,6 +89,22 @@ TEXT
     inject_into_file 'config/environments/production.rb', sendgrid_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
   end
   
+    ### modifying environment configuration files to send email using a Mandrill account
+    if recipes.include? 'mandrill'
+      mandrill_configuration_text = <<-TEXT
+  \n
+    config.action_mailer.smtp_settings = {
+      :address   => "smtp.mandrillapp.com",
+      :port      => 25,
+      :user_name => ENV["MANDRILL_USERNAME"],
+      :password  => ENV["MANDRILL_PASSWORD"]
+    }
+  TEXT
+      say_wizard gmail_configuration_text
+      inject_into_file 'config/environments/development.rb', mandrill_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
+      inject_into_file 'config/environments/production.rb', mandrill_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
+    end
+    
 end
 
 __END__
@@ -101,4 +120,4 @@ config:
   - mailer:
       type: multiple_choice
       prompt: "How will you send email?"
-      choices: [["SMTP account", smtp], ["Gmail account", gmail], ["SendGrid account", sendgrid]]
+      choices: [["SMTP account", smtp], ["Gmail account", gmail], ["SendGrid account", sendgrid], ["Mandrill by MailChimp account", mandrill]]
