@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 1.4.13 May 19, 2012
+
+* update 'action_mailer' recipe to add "Mandrill by MailChimp" option
+
 h2. 1.4.12 May 17, 2012
 
 * update 'action_mailer' recipe to allow choice of sending email via SMTP, Gmail, or SendGrid accounts
